src/test/error/var.lns
{
   let val:Map<int> = {};  // error
   let val2:Array<int,int> = [@];
   let val2:List<int,int> = [];
}

{
   let val1 = [];  // error
   let val2 = (@); // error
   let val3 = [@]; // error
   let val4 = {};  // error
}
{
   let val1;
   val1 = [];  // error
   let val2;
   val2 = (@); // error
   let val3;
   val3 = [@]; // error
   let val4;
   val4 = {};  // error
}
{
   let _, val = 0, 1;
   print( _, val );   // error
   let val2 = _; // error
   print( val2 );
}
{
   let mut val = 1; // warn
}
{
   let mut val = 1;
   {
      print( val );
   }
}
{
   let mut val = 1;
   {
      print( val );
      val = 2; // warn
   }
}
{
   let mut val = 1;
   fn func() {
      print( val );
   }
   {
      print( val );
      val = 2;
      func();
   }
}
{
   let map:Map<stem!,stem!> = {}; // error
   let set:Set<stem!> = (@); // error
}

pub let var = 1;
{
   pub let var2 = 1;  // error
}
pub let var3 = 1;

provide var;

